src/styles/components/Hero.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");

.hero {
  background-image: url("/src/assets/background.png");
  background-size: cover;
  background-position: center;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: #ffffff;
  font-family: "Inter", sans-serif;
  padding: 0 2rem;
  position: relative;
  z-index: -1;
  margin-top: -6rem;
}

.hero-content {
  text-align: left;
  max-width: 50%;
}

.hero-content h1 {
  font-size: 3rem;
  font-weight: bold;
  margin: 0;
}

.hero-content .highlight {
  color: #3acb6e;
}

.subtext {
  color: #ffffff;
  font-weight: 300;
  font-size: 1rem;
  margin-top: 1rem;
}

.hero-buttons {
  display: flex;
  gap: 1rem;
  margin-top: 1rem;
}

.hero-button {
  color: #ffffff;
  border: 1px solid #ffffff;
  text-decoration: none;
  padding: 0.5rem 1rem;
  font-weight: bold;
  font-size: 0.9rem;
  cursor: pointer;
  border-radius: 4px;
}

.hero-button:hover {
  background-color: #3acf6e;
  border-color: #3acf6e;
}

.hero-image {
  max-width: 40%;
  height: auto;
  margin-left: 2rem;
  margin-right: -2rem;
  margin-top: 6rem;
  margin-bottom: -1rem;
}

.hero-image img {
  width: 100%;
  height: auto;
  display: block;
}

.features {
  background-color: #ffffff;
  padding: 2rem;
  position: relative;
  text-align: left;
}

.features-content {
  position: relative;
}

.features-text {
  color: #606b86;
  margin-top: 2rem;
  margin-right: 30.5rem;
  font-size: 1.5rem;
}

.features-details {
  display: flex;
  /* align-items: center; */
  /* justify-content: space-between; */
  margin-top: 3rem;
}

.dots-image {
  max-height: 200px;
  position: absolute;
  top: 2.5rem;
  right: 2.5rem;
  transform: translate(50%, -50%);
}

.illustration-image {
  max-width: 50%;
  height: auto;
}

.features-heading {
  color: #2053d1;
  font-size: 1rem; 
  letter-spacing: 0.5em;
  margin-bottom: 0; 
  margin-top: 0;
}

.features-header {
  display: flex;
  flex-direction: column;
  margin-left: 2rem;
}

.meet-siphome {
  color: #262b36;
  font-size: 2rem;
  margin-top: 0rem;
  margin-bottom: 0;
  font-weight: bold;
}

.meet-siphome-description {
  color: #606b86;
  font-size: 0.875rem;
  margin-bottom: 0;
  margin-top: 1rem;
  padding-right: 15rem;
}

/* Mobile responsiveness */
@media (max-width: 768px) {
  .hero {
    flex-direction: column;
    justify-content: center;
  }

  .hero-content {
    text-align: center;
    max-width: 100%;
  }

  .subtext {
    font-size: 0.8rem;
  }

  .hero-buttons {
    flex-direction: row;
    justify-content: center;
    gap: 3rem;
  }

  .hero-image {
    display: none;
  }

  .features-details {
    flex-direction: column;
    align-items: center;
  }

  .features-heading {
    margin-left: 0;
    margin-top: 1rem;
  }
}

